fix: dark modeのセットアップ周り

--- a/src/features/posts/_styles/override.css
+++ b/src/features/posts/_styles/override.css
@@ -1,4 +1,4 @@
-@layer base {
+@layer override {
 	code {
 		&::after,
 		&::before {
